syntax = "proto3";

package feed_service;

option go_package = "github.com/ebilsanta/social-network/backend/feed-gen-service/api/proto";

import "post_service.proto";

service FeedService {
  rpc GetFeed (GetFeedRequest) returns (GetFeedResponse) {}
}

message GetFeedRequest {
  string userId = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message GetFeedResponse {
  repeated post_service.Post data = 1;
  bool fromCache = 2;
  PaginationMetadata pagination = 3;
}

message PaginationMetadata {
  int32 totalRecords = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
  int32 nextPage = 4;
  bool prevPage = 5;
}